; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/mv/armada38x/extr_armada38x.c_armada38x_mbus_optimization.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/mv/armada38x/extr_armada38x.c_armada38x_mbus_optimization.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fdtbus_bs_tag = common dso_local global i32 0, align 4
@MV_MBUS_CTRL_BASE = common dso_local global i64 0, align 8
@MV_MBUS_CTRL_REGS_LEN = common dso_local global i32 0, align 4
@BUS_SPACE_BARRIER_WRITE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @armada38x_mbus_optimization() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = load i32, i32* @fdtbus_bs_tag, align 4
  %5 = load i64, i64* @MV_MBUS_CTRL_BASE, align 8
  %6 = trunc i64 %5 to i32
  %7 = load i32, i32* @MV_MBUS_CTRL_REGS_LEN, align 4
  %8 = call i32 @bus_space_map(i32 %4, i32 %6, i32 %7, i32 0, i32* %2)
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %0
  %12 = load i32, i32* %3, align 4
  store i32 %12, i32* %1, align 4
  br label %36

13:                                               ; preds = %0
  %14 = load i32, i32* @fdtbus_bs_tag, align 4
  %15 = load i32, i32* %2, align 4
  %16 = call i32 @bus_space_write_4(i32 %14, i32 %15, i32 0, i32 102784)
  %17 = load i32, i32* @fdtbus_bs_tag, align 4
  %18 = load i32, i32* %2, align 4
  %19 = call i32 @bus_space_write_4(i32 %17, i32 %18, i32 4, i32 196618)
  %20 = load i32, i32* @fdtbus_bs_tag, align 4
  %21 = load i32, i32* %2, align 4
  %22 = call i32 @bus_space_write_4(i32 %20, i32 %21, i32 8, i32 65535)
  %23 = load i32, i32* @fdtbus_bs_tag, align 4
  %24 = load i32, i32* %2, align 4
  %25 = call i32 @bus_space_write_4(i32 %23, i32 %24, i32 12, i32 771)
  %26 = load i32, i32* @fdtbus_bs_tag, align 4
  %27 = load i32, i32* %2, align 4
  %28 = load i32, i32* @MV_MBUS_CTRL_REGS_LEN, align 4
  %29 = load i32, i32* @BUS_SPACE_BARRIER_WRITE, align 4
  %30 = call i32 @bus_space_barrier(i32 %26, i32 %27, i32 0, i32 %28, i32 %29)
  %31 = load i32, i32* @fdtbus_bs_tag, align 4
  %32 = load i32, i32* %2, align 4
  %33 = load i32, i32* @MV_MBUS_CTRL_REGS_LEN, align 4
  %34 = call i32 @bus_space_unmap(i32 %31, i32 %32, i32 %33)
  %35 = load i32, i32* %3, align 4
  store i32 %35, i32* %1, align 4
  br label %36

36:                                               ; preds = %13, %11
  %37 = load i32, i32* %1, align 4
  ret i32 %37
}

declare dso_local i32 @bus_space_map(i32, i32, i32, i32, i32*) #1

declare dso_local i32 @bus_space_write_4(i32, i32, i32, i32) #1

declare dso_local i32 @bus_space_barrier(i32, i32, i32, i32, i32) #1

declare dso_local i32 @bus_space_unmap(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
